--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# OS
+.DS_Store
 
-# Go workspace file
-go.work
+# IDE
+.idea
+.vscode
