--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: go mod verify
 
     - name: Build
-      run: go build -v ./...
+      run: ./scripts/build.sh
 
     - name: Run go vet
       run: go vet ./...
