solve duplicate proto type registered

--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -9,7 +9,8 @@ breaking:
   use:
     - FILE
 deps:
-  - buf.build/prometheus/client-model 
+  - buf.build/prometheus/client-model
+  - buf.build/cosmos/gogo-proto
 lint:
   use:
     - DEFAULT
