Add golint to GitHub Actions workflow for Go code linting

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,5 +40,8 @@ jobs:
     - name: Install golint
       run: go install golang.org/x/lint/golint@latest
 
+    - name: Run golint
+      run: golint ./...
+
     - name: Test
       run: go test -race -vet=off -v ./...
