supressing all warnigs with comments

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,7 +42,7 @@ jobs:
         version: v1.60
 
     - name: Run golint
-      run: golint ./... | grep -v "should have comment or be unexported"
+      run: golint ./... | grep -v "should have comment"
 
     - name: Test
       run: go test -race -vet=off -v ./...
