--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,8 +41,8 @@ jobs:
       with:
         version: v1.60
 
-    - name: Run golint
-      run: golint ./... | grep -v "should have comment or be unexported"
+    - name: Run golangci-lint
+      run: golangci-lint run ./...
 
     - name: Test
       run: go test -race -vet=off -v ./...
