--- a/.golangci.yml
+++ b/.golangci.yml
@@ -256,7 +256,7 @@ linters:
 #    - funlen # tool for detection of long functions
     - gocheckcompilerdirectives # validates go compiler directive comments (//go:)
 #    - gochecknoglobals # checks that no global variables exist
-#    - gochecknoinits # checks that no init functions are present in Go code
+#    - gochecknoinits # checks that no init functions are present in Go code)
     - gochecksumtype # checks exhaustiveness on Go "sum types"
 #    - gocognit # computes and checks the cognitive complexity of functions
     - goconst # finds repeated strings that could be replaced by a constant
