--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         go-version: '1.22'
 
+    - name: Clear Go module cache
+      run: go clean -modcache
+
     - name: Verify dependencies
       run: go mod verify
 
