--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,6 @@ on:
   pull_request:
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -21,9 +20,6 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22'
-
-    - name: Clear Go module cache
-      run: go clean -modcache
 
     - name: Verify dependencies
       run: go mod verify
@@ -41,12 +37,9 @@ jobs:
       run: staticcheck ./...
 
     - name: Install golangci-lint
-      uses: golangci/golangci-lint-action@v2
+      uses: golangci/golangci-lint-action@v6
       with:
-        version: latest
-
-    - name: Run golangci-lint
-      run: golangci-lint run ./...
+        version: v1.60
 
     - name: Test
       run: go test -race -vet=off -v ./...
