--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Run staticcheck
       run: staticcheck ./...
 
-    - name: Install golangci-lint
+    - name: golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
         version: v1.60
