--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,6 @@ on:
   pull_request:
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -37,13 +36,10 @@ jobs:
     - name: Run staticcheck
       run: staticcheck ./...
 
-    - name: Install golangci-lint
-      uses: golangci/golangci-lint-action@v2
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v6
       with:
-        version: latest
-
-    - name: Run golangci-lint
-      run: golangci-lint run ./...
+        version: v1.60
 
     - name: Test
       run: go test -race -vet=off -v ./...
